<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.juergens</groupId>
        <artifactId>date-parser</artifactId>
        <version>0.0.2-SNAPSHOT</version>
    </parent>

    <artifactId>date-rule-antlr</artifactId>
    <version>0.0.6</version>
    <packaging>jar</packaging>

    <name>${project.artifactId}</name>
    <description>Date parser based on ANTLR</description>
    <inceptionYear>2015</inceptionYear>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- org.antlr -->
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.5.1-1</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>stringtemplate</artifactId>
            <version>4.0.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4</artifactId>
            <version>4.5.1-1</version>
        </dependency>

        <!-- @deprecated -->
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.9.4</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.9.4</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <compilerArg>
                            -Xlint:unchecked
                        </compilerArg>
                        <compilerArg>
                            -Xlint:deprecation
                        </compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <configuration>
                    <locales>en,fr</locales>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>4.5.3</version>
                <configuration>
                    <libDirectory>${project.basedir}/src/main/antlr4/io/github/hjuergens/time</libDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>antlr</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                        <configuration>
                            <atn>true</atn>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <parallel>methods</parallel>
                    <threadCount>10</threadCount>
                    <suiteXmlFiles>
                        <suiteXmlFile>${project.build.testOutputDirectory}/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>

            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.5.0</version>
                <executions>
                    <execution>
                        <id>antlr.test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <arguments>
                                <argument>io.github.hjuergens.time.Dates</argument>
                                <argument>dates</argument>
                                <argument>${project.basedir}/src/test/resources/dates.expr</argument>
                            </arguments>
                        </configuration>
                    </execution>

                </executions>
                <configuration>
                    <mainClass>org.antlr.v4.gui.TestRig</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>validate</phase>
                        <goals><goal>copy-resources</goal></goals>
                        <configuration>
                            <outputDirectory>${project.basedir}/target/site/doxygen</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/site/doxygen</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>de.oscillation.maven</groupId>
                <artifactId>doxygen-maven-plugin</artifactId>
                <version>0.1.0</version>
                <configuration>
                    <workingDirectory>${project.build.directory}/site/doxygen</workingDirectory>
                    <!--doxyfilePath>/site/doxygen.config</doxyfilePath-->
                    <autogen>false</autogen>
                    <executablePath>/usr/bin/doxygen</executablePath>
                </configuration>
                <executions>
                    <execution>
                        <id>clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>generate</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>false</failsOnError>
                            <configLocation>${project.basedir}/checkstyle.xml</configLocation>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>calendar</id>
            <dependencies>
                <dependency>
                    <groupId>org.mnode.ical4j</groupId>
                    <artifactId>ical4j</artifactId>
                    <version>2.0-beta1</version>
                </dependency>

                <dependency>
                    <groupId>org.bedework</groupId>
                    <artifactId>bw-ical4j-cl</artifactId>
                    <version>1.1.3</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
